Fix roadmap scrolling view on mobile

--- a/src/scss/includes/mobileRouteDetails.scss
+++ b/src/scss/includes/mobileRouteDetails.scss
@@ -11,7 +11,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   z-index: 3;
   animation: fullscreenLegDetails 0.3s forwards;
 
@@ -47,7 +47,6 @@
   }
 
   .itinerary_roadmap {
-    height: 100%;
     overflow: auto;
   }
 }
